--- a/mod3.out/web-app/pom.xml
+++ b/mod3.out/web-app/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.shashi</groupId>
+			<artifactId>data-access</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
