--- a/mod.ryan.out/data-access/pom.xml
+++ b/mod.ryan.out/data-access/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+    <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
