--- a/mod.ryan.out/service/pom.xml
+++ b/mod.ryan.out/service/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+    <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
