--- a/mod.andrew.out/web-app/pom.xml
+++ b/mod.andrew.out/web-app/pom.xml
@@ -61,6 +61,10 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
