passed all tests - testing with local deployment before gke

--- a/mod.andrew.out/web-app/pom.xml
+++ b/mod.andrew.out/web-app/pom.xml
@@ -65,6 +65,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>postgres-socket-factory</artifactId>
+            <version>1.10.0</version> <!-- Use the latest stable version -->
+        </dependency>
     </dependencies>
 
     <build>
