--- a/mod.andrew.out/web-app/src/main/resources/application.properties
+++ b/mod.andrew.out/web-app/src/main/resources/application.properties
@@ -47,7 +47,7 @@ server.port=8081
 =======
 spring.datasource.url=jdbc:postgresql://localhost:5432/shoppingcart
 spring.datasource.username=postgres
-spring.datasource.password=date59com
+spring.datasource.password=FILLME
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
