removed properties with password

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ mod2.out/web-app/src/main/resources/application.properties
 app.log
 webapp.pid
 webapp.log
+mod.andrew.out/web-app/src/main/resources/application.properties
