--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ app.log
 webapp.pid
 webapp.log
 mod.andrew.out/web-app/src/main/resources/application.properties
+mod.andrew.out/web-app/src/main/resources/application.properties
