--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ mcdc
 codmod
 target/
 spring-boot-app.log
-mod2.out/web-app/src/main/resources/application.properties
+application.properties
 app.log
 webapp.pid
 webapp.log
-mod.andrew.out/web-app/src/main/resources/application.properties
