feat: Implement AI product info service
This commit introduces the `AiProductInfoService`, which provides AI-generated product information.

The key changes include:
- A new `AiProductInfoService` that integrates with the Gemini API.
- Unit tests for the service, mocking the external API.
- A base class for integration tests to provide a mock `Client` bean.
- Refactoring of existing integration tests to use the base class.

This commit marks the completion of story 1.1.

--- a/mod.phase3.out/service/pom.xml
+++ b/mod.phase3.out/service/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.genai</groupId>
+            <artifactId>google-genai</artifactId>
+            <version>1.15.0</version>
+        </dependency>
     </dependencies>
 
     <build>
