application-gcp.properties

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ app.log
 webapp.pid
 webapp.log
 mod.andrew.out/web-app/src/main/resources/application.properties
+# BMAD (local only)
+.bmad-core/
+.bmad-*/
