added bmad HOWTO doc; ignoring local installation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ app.log
 webapp.pid
 webapp.log
 mod.andrew.out/web-app/src/main/resources/application.properties
+### VS Code ###
+.vscode/
+.bmad-core/
+AGENTS.md
