feat: Implement AI product info and fix product details page
This commit includes the following changes:

- Implement the AI product info feature, including backend service and frontend integration.
- Allow anonymous access to the product details page by modifying the security configuration.
- Fix the inconsistent header and footer on the product details page by aligning the Bootstrap CSS and JS versions and using a consistent panel layout.

--- a/mod.phase3.out/web-app/pom.xml
+++ b/mod.phase3.out/web-app/pom.xml
@@ -89,7 +89,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                
+                <configuration>
+                    <environmentVariables>
+                        <GOOGLE_API_KEY>${env.GOOGLE_API_KEY}</GOOGLE_API_KEY>
+                    </environmentVariables>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
