--- a/mod.phase3.out/web-app/pom.xml
+++ b/mod.phase3.out/web-app/pom.xml
@@ -75,6 +75,19 @@
             <artifactId>postgres-socket-factory</artifactId>
             <version>1.10.0</version> <!-- Use the latest stable version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
