feat: Configure Selenium tests to use Testcontainers

--- a/mod.phase3.out/web-app/pom.xml
+++ b/mod.phase3.out/web-app/pom.xml
@@ -61,9 +61,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>5.8.0</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>selenium</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
