--- a/mod.phase3.out/service/pom.xml
+++ b/mod.phase3.out/service/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>google-genai</artifactId>
             <version>1.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
